# curie-sdk-py

./: LICENSE  README.md  pyproject.toml
curie/: __init__.py  _http.py  client.py  exceptions.py
curie/types/: __init__.py  embeddings.py  protein.py
examples/: async_example.py  quick_start.py
tests/: test_client.py
